--- a/style.css
+++ b/style.css
@@ -1,21 +1,93 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,
-h6,p,blockquote,pre,a,abbr,acronym,
-address,big,cite,code,del,dfn,em,
-img,ins,kbd,q,s,samp,small,strike,
-strong,sub,sup,tt,var,b,u,i,center,
-dl,dt,dd,ol,ul,li,fieldset,form,
-label,legend,table,caption,tbody,tfoot,
-thead,tr,th,td,article,aside,canvas,details,embed,
-figure,figcaption,footer,header,hgroup,menu,
-nav,output,ruby,section,summary,
-time,mark,audio,video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
     margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-} /* HTML5 display-role reset for older browsers */
+}
+
+/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -29,17 +101,21 @@ nav,
 section {
     display: block;
 }
+
 body {
     line-height: 1;
 }
+
 ol,
 ul {
     list-style: none;
 }
+
 blockquote,
 q {
     quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -47,24 +123,30 @@ q:after {
     content: "";
     content: none;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
-} /* Grid */
+}
+
+/* Grid */
 html {
     box-sizing: border-box;
 }
+
 *,
 *:before,
 *:after {
     box-sizing: inherit;
 }
+
 .container {
     margin: 0 auto;
     padding: 0 25px;
     text-align: center;
     position: relative;
 }
+
 .overlay {
     position: absolute;
     top: 50%;
@@ -79,14 +161,17 @@ html {
     justify-content: center;
     align-items: center;
 }
+
 .title {
     margin-bottom: 15px;
 }
+
 #gameBoard,
 .row {
     display: flex;
     flex-flow: row wrap;
 }
+
 #gameBoard {
     width: 600px;
     height: 600px;
@@ -95,30 +180,40 @@ html {
     box-sizing: content-box;
     background: #a8c899;
 }
+
 .gameOverGrid {
     margin: auto;
-} /* Game */
+}
+
+/* Game */
 .pixel {
     width: 15px;
     height: 15px;
     box-sizing: border-box;
 }
+
 .snakePixel {
     background-color: #000;
 }
+
 .foodPixel {
     background-color: cyan;
 }
+
 #gameOver {
     color: cornflowerblue;
     display: none;
 }
+
 .pixel:last-child {
     border-right: none;
 }
+
 .row:last-child .pixel {
     border-bottom: none;
-} /* Style */
+}
+
+/* Style */
 .btn {
     background: #3498db;
     background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
@@ -136,6 +231,7 @@ html {
     text-decoration: none;
     border: 0;
 }
+
 .btn:hover {
     background: #3cb0fd;
     background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
@@ -144,27 +240,36 @@ html {
     background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
     background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
     text-decoration: none;
-} /* Typog */ /*! Typebase.less v0.1.0 | MIT License */ /* Setup */
+}
+
+/* Typog */
+/*! Typebase.less v0.1.0 | MIT License */
+/* Setup */
 html {
     /* Change default typefaces here */
     font-family: serif;
     font-size: 137.5%;
     -webkit-font-smoothing: antialiased;
-} /* Copy & Lists */
+}
+
+/* Copy & Lists */
 p {
     line-height: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 0;
 }
+
 ul,
 ol {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
+
 ul li,
 ol li {
     line-height: 1.5rem;
 }
+
 ul ul,
 ol ul,
 ul ol,
@@ -172,11 +277,14 @@ ol ol {
     margin-top: 0;
     margin-bottom: 0;
 }
+
 blockquote {
     line-height: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-} /* Headings */
+}
+
+/* Headings */
 h1,
 h2,
 h3,
@@ -189,44 +297,59 @@ h6 {
     margin-bottom: 0;
     line-height: 1.5rem;
 }
+
 h1 {
     font-size: 4.242rem;
     line-height: 4.5rem;
     margin-top: 3rem;
 }
+
 h2 {
     font-size: 2.828rem;
     line-height: 3rem;
     margin-top: 3rem;
 }
+
 h3 {
     font-size: 1.414rem;
 }
+
 h4 {
     font-size: 0.707rem;
 }
+
 h5 {
     font-size: 0.4713333333333333rem;
 }
+
 h6 {
     font-size: 0.3535rem;
-} /* Tables */
+}
+
+/* Tables */
 table {
     margin-top: 1.5rem;
     border-spacing: 0px;
     border-collapse: collapse;
 }
+
 table td,
 table th {
     padding: 0;
     line-height: 33px;
-} /* Code blocks */
+}
+
+/* Code blocks */
 code {
     vertical-align: bottom;
-} /* Leading paragraph text */
+}
+
+/* Leading paragraph text */
 .lead {
     font-size: 1.414rem;
-} /* Hug the block above you */
+}
+
+/* Hug the block above you */
 .hug {
     margin-top: 0;
 }
